{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 61,
  "lineage": "9fe0fb90-8378-5be0-47bb-0d162cb9e9c9",
  "resources": [
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:987471316553:loadbalancer/app/load-balancer/8c9e7faf3a6fbd4b",
            "arn_suffix": "app/load-balancer/8c9e7faf3a6fbd4b",
            "desync_mitigation_mode": "defensive",
            "dns_name": "load-balancer-996211093.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:987471316553:loadbalancer/app/load-balancer/8c9e7faf3a6fbd4b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "load-balancer",
            "security_groups": [
              "sg-0a5fde56391394b57"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-049a2a43eb83ca90b"
              },
              {
                "subnet_id": "subnet-06245e758c547e908"
              },
              {
                "subnet_id": "subnet-08f43399be766c5bb"
              }
            ],
            "subnets": [
              "subnet-049a2a43eb83ca90b",
              "subnet-06245e758c547e908",
              "subnet-08f43399be766c5bb"
            ],
            "tags": {
              "Name": "Elastic Load Balancer",
              "project": "ecommerce-demo"
            },
            "tags_all": {
              "Name": "Elastic Load Balancer",
              "project": "ecommerce-demo"
            },
            "vpc_id": "vpc-05c79510596513bca",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "module.vpc.aws_security_group.load_balancer_sg",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:987471316553:listener/app/load-balancer/8c9e7faf3a6fbd4b/7889b366a6e89d60",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:987471316553:targetgroup/ecs/4aa4a5aaff282818",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:987471316553:listener/app/load-balancer/8c9e7faf3a6fbd4b/7889b366a6e89d60",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:987471316553:loadbalancer/app/load-balancer/8c9e7faf3a6fbd4b",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.elb.aws_lb.elb",
            "module.elb.aws_lb_target_group.ecs",
            "module.vpc.aws_security_group.load_balancer_sg",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:987471316553:targetgroup/ecs/4aa4a5aaff282818",
            "arn_suffix": "targetgroup/ecs/4aa4a5aaff282818",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 300,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 60,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:987471316553:targetgroup/ecs/4aa4a5aaff282818",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ecs",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "Elastic Container Service",
              "project": "ecommerce-demo"
            },
            "tags_all": {
              "Name": "Elastic Container Service",
              "project": "ecommerce-demo"
            },
            "target_type": "ip",
            "vpc_id": "vpc-05c79510596513bca"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-060681ec1b44b79f8",
            "association_id": "eipassoc-0410b6327921c3792",
            "domain": "vpc",
            "id": "eipalloc-060681ec1b44b79f8",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0ea7c7ef70e2b1342",
            "private_dns": "ip-10-0-1-116.us-west-2.compute.internal",
            "private_ip": "10.0.1.116",
            "public_dns": "ec2-52-12-87-0.us-west-2.compute.amazonaws.com",
            "public_ip": "52.12.87.0",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0172caacced1a2867",
            "association_id": "eipassoc-0510e17cfb8d58073",
            "domain": "vpc",
            "id": "eipalloc-0172caacced1a2867",
            "network_border_group": "us-west-2",
            "network_interface": "eni-04ae7c6f866806f3a",
            "private_dns": "ip-10-0-2-49.us-west-2.compute.internal",
            "private_ip": "10.0.2.49",
            "public_dns": "ec2-52-33-181-177.us-west-2.compute.amazonaws.com",
            "public_ip": "52.33.181.177",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a8de89d1b8042143",
            "association_id": "eipassoc-02d186bd63122a023",
            "domain": "vpc",
            "id": "eipalloc-0a8de89d1b8042143",
            "network_border_group": "us-west-2",
            "network_interface": "eni-05fa633fe47c281a7",
            "private_dns": "ip-10-0-3-136.us-west-2.compute.internal",
            "private_ip": "10.0.3.136",
            "public_dns": "ec2-52-33-200-122.us-west-2.compute.amazonaws.com",
            "public_ip": "52.33.200.122",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internal_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:987471316553:internet-gateway/igw-0fa514f5ecb644040",
            "id": "igw-0fa514f5ecb644040",
            "owner_id": "987471316553",
            "tags": {
              "Name": "Internet Gateway",
              "project": "ecommerce-demo"
            },
            "tags_all": {
              "Name": "Internet Gateway",
              "project": "ecommerce-demo"
            },
            "vpc_id": "vpc-05c79510596513bca"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-060681ec1b44b79f8",
            "connectivity_type": "public",
            "id": "nat-0c972861434248f7b",
            "network_interface_id": "eni-0ea7c7ef70e2b1342",
            "private_ip": "10.0.1.116",
            "public_ip": "52.12.87.0",
            "subnet_id": "subnet-06245e758c547e908",
            "tags": {
              "Name": "Nat Gateway 1",
              "project": "ecommerce-demo"
            },
            "tags_all": {
              "Name": "Nat Gateway 1",
              "project": "ecommerce-demo"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0172caacced1a2867",
            "connectivity_type": "public",
            "id": "nat-096ef90551b78de74",
            "network_interface_id": "eni-04ae7c6f866806f3a",
            "private_ip": "10.0.2.49",
            "public_ip": "52.33.181.177",
            "subnet_id": "subnet-049a2a43eb83ca90b",
            "tags": {
              "Name": "Nat Gateway 2",
              "project": "ecommerce-demo"
            },
            "tags_all": {
              "Name": "Nat Gateway 2",
              "project": "ecommerce-demo"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a8de89d1b8042143",
            "connectivity_type": "public",
            "id": "nat-0e95d51bb1ce08806",
            "network_interface_id": "eni-05fa633fe47c281a7",
            "private_ip": "10.0.3.136",
            "public_ip": "52.33.200.122",
            "subnet_id": "subnet-08f43399be766c5bb",
            "tags": {
              "Name": "Nat Gateway 3",
              "project": "ecommerce-demo"
            },
            "tags_all": {
              "Name": "Nat Gateway 3",
              "project": "ecommerce-demo"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:987471316553:route-table/rtb-01dd44a5b7de94c4a",
            "id": "rtb-01dd44a5b7de94c4a",
            "owner_id": "987471316553",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0c972861434248f7b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Route Table 1",
              "project": "ecommerce-demo"
            },
            "tags_all": {
              "Name": "Private Route Table 1",
              "project": "ecommerce-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-05c79510596513bca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:987471316553:route-table/rtb-02a37cc0551a06b78",
            "id": "rtb-02a37cc0551a06b78",
            "owner_id": "987471316553",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-096ef90551b78de74",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Route Table 2",
              "project": "ecommerce-demo"
            },
            "tags_all": {
              "Name": "Private Route Table 2",
              "project": "ecommerce-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-05c79510596513bca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:987471316553:route-table/rtb-01858b7de7fc4b450",
            "id": "rtb-01858b7de7fc4b450",
            "owner_id": "987471316553",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0e95d51bb1ce08806",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Route Table 3",
              "project": "ecommerce-demo"
            },
            "tags_all": {
              "Name": "Private Route Table 3",
              "project": "ecommerce-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-05c79510596513bca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pubic_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:987471316553:route-table/rtb-042fca323c8fcac54",
            "id": "rtb-042fca323c8fcac54",
            "owner_id": "987471316553",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fa514f5ecb644040",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route Table",
              "project": "ecommerce-demo"
            },
            "tags_all": {
              "Name": "Public Route Table",
              "project": "ecommerce-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-05c79510596513bca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.internal_gateway",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0336f246dd371cd7e",
            "route_table_id": "rtb-01dd44a5b7de94c4a",
            "subnet_id": "subnet-0e9a1a8781bb59f04"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bb9e0d38df7f485c",
            "route_table_id": "rtb-02a37cc0551a06b78",
            "subnet_id": "subnet-056d9b686c8e2f791"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0495179f14c2cf2c1",
            "route_table_id": "rtb-01858b7de7fc4b450",
            "subnet_id": "subnet-0bf776005058fad06"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway",
            "module.vpc.aws_nat_gateway.nat_gateway",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.private_subnets",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bb63e7647e647284",
            "route_table_id": "rtb-042fca323c8fcac54",
            "subnet_id": "subnet-06245e758c547e908"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internal_gateway",
            "module.vpc.aws_route_table.pubic_route_table",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09e3582a6a5022167",
            "route_table_id": "rtb-042fca323c8fcac54",
            "subnet_id": "subnet-049a2a43eb83ca90b"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internal_gateway",
            "module.vpc.aws_route_table.pubic_route_table",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b6698fc49e6d3a25",
            "route_table_id": "rtb-042fca323c8fcac54",
            "subnet_id": "subnet-08f43399be766c5bb"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internal_gateway",
            "module.vpc.aws_route_table.pubic_route_table",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_task_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:987471316553:security-group/sg-0900019b26f982e6b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0900019b26f982e6b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a5fde56391394b57"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20231004053123442400000004",
            "name_prefix": "terraform-",
            "owner_id": "987471316553",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ECS Task Security Group",
              "project": "ecommerce-demo"
            },
            "tags_all": {
              "Name": "ECS Task Security Group",
              "project": "ecommerce-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-05c79510596513bca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:987471316553:security-group/sg-0a5fde56391394b57",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0a5fde56391394b57",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20231004053124885400000005",
            "name_prefix": "terraform-",
            "owner_id": "987471316553",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Load Balancer Security Group",
              "project": "ecommerce-demo"
            },
            "tags_all": {
              "Name": "Load Balancer Security Group",
              "project": "ecommerce-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-05c79510596513bca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_ecs_task_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-4212526124",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0900019b26f982e6b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.ecs_task_sg",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_load_balancer_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3992995889",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a5fde56391394b57",
            "self": false,
            "source_security_group_id": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.load_balancer_sg",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_ecs_task_sg_elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 80,
            "id": "sgrule-1701592364",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0900019b26f982e6b",
            "self": false,
            "source_security_group_id": "sg-0a5fde56391394b57",
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.ecs_task_sg",
            "module.vpc.aws_security_group.load_balancer_sg",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_load_balancer_sg_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-3662814684",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a5fde56391394b57",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.load_balancer_sg",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_load_balancer_sg_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-3903348330",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a5fde56391394b57",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.load_balancer_sg",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:987471316553:subnet/subnet-0e9a1a8781bb59f04",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e9a1a8781bb59f04",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "987471316553",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 1",
              "project": "ecommerce-demo"
            },
            "tags_all": {
              "Name": "Private Subnet 1",
              "project": "ecommerce-demo"
            },
            "vpc_id": "vpc-05c79510596513bca"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:987471316553:subnet/subnet-056d9b686c8e2f791",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-056d9b686c8e2f791",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "987471316553",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 2",
              "project": "ecommerce-demo"
            },
            "tags_all": {
              "Name": "Private Subnet 2",
              "project": "ecommerce-demo"
            },
            "vpc_id": "vpc-05c79510596513bca"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:987471316553:subnet/subnet-0bf776005058fad06",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bf776005058fad06",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "987471316553",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet 3",
              "project": "ecommerce-demo"
            },
            "tags_all": {
              "Name": "Private Subnet 3",
              "project": "ecommerce-demo"
            },
            "vpc_id": "vpc-05c79510596513bca"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:987471316553:subnet/subnet-06245e758c547e908",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06245e758c547e908",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "987471316553",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 1",
              "project": "ecommerce-demo"
            },
            "tags_all": {
              "Name": "Public Subnet 1",
              "project": "ecommerce-demo"
            },
            "vpc_id": "vpc-05c79510596513bca"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:987471316553:subnet/subnet-049a2a43eb83ca90b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-049a2a43eb83ca90b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "987471316553",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 2",
              "project": "ecommerce-demo"
            },
            "tags_all": {
              "Name": "Public Subnet 2",
              "project": "ecommerce-demo"
            },
            "vpc_id": "vpc-05c79510596513bca"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:987471316553:subnet/subnet-08f43399be766c5bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08f43399be766c5bb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "987471316553",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 3",
              "project": "ecommerce-demo"
            },
            "tags_all": {
              "Name": "Public Subnet 3",
              "project": "ecommerce-demo"
            },
            "vpc_id": "vpc-05c79510596513bca"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:987471316553:vpc/vpc-05c79510596513bca",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e33d52bf91159305",
            "default_route_table_id": "rtb-04d5947e7f75bd928",
            "default_security_group_id": "sg-0a4f26b3a6206ac31",
            "dhcp_options_id": "dopt-025fca6fe31d79e55",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-05c79510596513bca",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04d5947e7f75bd928",
            "owner_id": "987471316553",
            "tags": {
              "Name": "vpc",
              "project": "ecommerce-demo"
            },
            "tags_all": {
              "Name": "vpc",
              "project": "ecommerce-demo"
            }
          }
        }
      ]
    }
  ]
}